force-app/main/default/objects/Quote/fields/Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Date__c</fullName>
    <description>When customer accepted quote</description>
    <label>Acceptance Date</label>
    <type>DateTime</type>
</CustomField>