force-app/main/default/objects/Quote/fields/Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By__c</fullName>
    <description>Name/email of person who accepted</description>
    <label>Accepted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>