force-app/main/default/objects/Quote/fields/Quotient_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quotient_Quote_Number__c</fullName>
    <label>Quotient Quote Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>