force-app/main/default/objects/Quote/fields/Quotient_Quote_URL__c.field-meta.xml
<CustomField>
    <fullName>Quotient_Quote_URL__c</fullName>
    <description>Direct link to view quote in Quotient</description>
    <label>Quotient Quote URL</label>
    <type>Url</type>
</CustomField>