force-app/main/default/objects/Quote/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <description>When quote was sent to customer</description>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>