force-app/main/default/objects/Quote/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax %</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Tax</fullName>
            </value>
            <value>
                <fullName>10% GST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>