force-app/main/default/objects/Quote/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Quote version number</description>
    <label>Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>