force-app/main/default/objects/Quote/fields/Viewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Viewed_Date__c</fullName>
    <description>When customer first viewed quote</description>
    <label>Viewed Date</label>
    <type>DateTime</type>
</CustomField>