force-app/main/default/objects/Quote/validationRules/Only_one_Accepted_Quote_can_exist.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_one_Accepted_Quote_can_exist</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Accepted&quot;),
  Opportunity.Has_Accepted_Quote__c,
  OR(
    ISNEW(),
    AND(
      ISCHANGED(Status),
      NOT( ISPICKVAL(PRIORVALUE(Status), &quot;Accepted&quot;) )
    )
  )
)</errorConditionFormula>
    <errorMessage>Only one Accepted Quote can exist for an Enquiry, please mark the other Quote as Rejected if you want to continue with this Enquiry.</errorMessage>
</ValidationRule>